@@ -2,162 +2,180 @@
 
 ![VanillaBP](./readme/vanillabp-headline.png)
 
-# Business cockpit
+# VanillaBP Business Cockpit
 
-The *VanillaBP business cockpit* is a UI for business people to work with business processes. It is about:
+The *VanillaBP Business Cockpit* is an application for business people to work with business processes. It is about:
 
-1. Process instances (= workflow)
-     1. Search for workflows by business data
-     1. View active and retired workflows
-1. User tasks
-     1. Search for user tasks by business data
-     1. List active and retried user tasks
-     1. Fulfill user tasks
+1. *Workflows* (= Processes currently executed):
+   1. Search for workflows by business data.
+   1. View active and retired workflows.
+   1. Show business aspects and provide actions.
+1. *User tasks* (= items of work of a workflow to be done by humans):
+   1. Search for user tasks by business data.
+   1. List active and retired user tasks.
+   1. Fulfill user tasks.
 
-Like [VanillaBP](https://www.vanillabp.io) itself was designed to be [BPMS](https://en.wikipedia.org/wiki/Business_process_management)-agnostic, also *VanillaBP business cockpit* is able act as a UI for any BPMS. This also makes it possible to display workflows and user tasks from different systems in one unifying user interface .
+Like [VanillaBP](https://www.vanillabp.io) itself was designed to be [BPMS](https://en.wikipedia.org/wiki/Business_process_management#Definitions)-agnostic, also the *VanillaBP Business Cockpit* is able
+to act as a UI for any [BPMS](https://en.wikipedia.org/wiki/Business_process_management#Definitions).
+As a consequence workflows and user tasks from different systems will be available in one unifying user interface.
 
-To learn how to integrate your business services into the VanillaBP business cockpit check the [respective chapter](#integrate-your-business-services).
+**Contents:**
 
-## Development
+1. [Application](#application)
+   1. [Concepts in a glance](#architecture-in-a-glance)
+   2. [Customized business cockpit applications](#customized-business-cockpit-applications)
+   3. [Functionality provided by the business cockpit](#functionality-provided-by-the-business-cockpit)
+   4. [Technologies](#technologies)
+3. [Documentation](#documentation)
+   1. [By use-case](#by-use-case)
+   2. [By module](#by-module)
+3. [Noteworthy & Contributors](#noteworthy--contributors)
+4. [License](#license)
 
-The VanillaBP business cockpit is a Java Spring Boot application using React as a web framework.
+## Application
 
-For local development there are two preconditions:
+### Concepts in a glance
 
-1. [A MongoDB cluster](#mongodb)
-1. [A local NPM registry](#local-npm-registry)
+In companies that use business process management, agents need a single place to organize their tasks originated in
+different workflows or even different workflow systems. Otherwise, employees would have to regularly check each individual application for new
+tasks or use email notifications to alert them about new tasks, which then flood the inbox. To avoid this, the
+*VanillaBP Business Cockpit* acts as *the* unifying frontend application for all workflows.
 
-The MongoDB and the NPM registry can be started by a prepared configuration using docker-compose:
+The *VanillaBP Business Cockpit* runtime is a microservice. That means it is only about providing cockpit functionality.
+The workflows have to be executed by other (micro-)services (business services). Each workflow specific content
+is hosted by those business services running the workflow. So, everything needed to fulfill a workflow is bundled in
+a so-called "Workflow Module" within the business service. Each workflow module has its own version lifecycle
+(workflow as BPMN, code to run the BPMN, UI for user-tasks, backend code to show/complete user-tasks).
 
-```sh
-cd development
-docker-compose up -d
-```
+However, the business cockpit UI will provide all parts (UI provided by the business cockpit, UI provided by the
+workflow modules like user task forms or status-sites of workflows)
+as one seamless web-application to the user. This is achieved by using
+"Module Federation", a mechanism to load parts of the UI (user task forms, etc.) dynamically (not packed into the main
+web-application at compile-time).
 
-All services are configured to NOT start automatically. So, evertime one reboots the computer the services has to be started again:
- 
-```sh
-cd development
-docker-compose start
-```
+To avoid cross-site-scripting, the business cockpit backend acts as a proxy to business services. This spans
+one consistent umbrella of security across the entire application. Every "Workflow Module" has to register to the
+business cockpit on startup to initialize the respective proxy.
 
-Afterwards one can [build and run the business cockpit](#build-and-run-the-business-cockpit).
+To provide lists of user tasks and workflows any business
+workflow lifecycle event or user task lifecycle event (created, completed, cancelled) has to be reported by the
+"Workflow module" to the business cockpit. Reporting can be done via REST or asynchronously via Kafka and is
+already implemented by ready-to-use adapters (Maven modules) for [VanillaBP](https://www.vanillabp.io) based workflows.
 
-*Hint:* Building the business cockpit will also establish npm-links between the packages provided by this repository. This helps to ensure using the right version during the build and also supports local development.
+The *VanillaBP Business Cockpit* approach described above also implies that not every business workflow service
+needs its own standalone web-application.
+Individual web-applications are only necessary if the workflow application has excessive UI functionality
+beyond user tasks or status-sites of workflows. Additionally, the business cockpit is a perfect place to add
+cross-cutting functionality (e.g. registration of absences or vacation replacements) as well as start-forms
+for business processes having no own web-application.
 
-### MongoDB
+### Customized business cockpit applications
 
-For production MongoDb one has to use replica-sets because the VanillaBP business cockpit uses the MongoDb "changestream" feature which not available otherwise.
+The *VanillaBP Business Cockpit* can be executed out-of-the-box showing a vanilla flavored design.
+Typically, one wants to use own icons, colors and fonts according to the cooperate identity.
+To achieve this one can build an individual Spring Boot application using the *VanillaBP Business Cockpit*
+container module as a Maven-dependency. Doing so ensures the backend functionality is inherited.
 
-Since MongoDb exposes its own endpoint one has to add a hostname alias to the local `hosts` file:
+For the custom UI the original frontend (web-application) can be copied as a template or replaced by your
+own implementation. The *VanillaBP Business Cockpit* UI is implemented by using React. Several NPM libraries are provided to implement
+a custom business cockpit UI next to user task forms provided by business services. However, one may also use other frameworks (Vue, Angular).
+The [UI components provided by the *VanillaBP Business Cockpit*](#functionality-provided-by-the-business-cockpit) can be integrated as web-components.
 
-```
-127.0.0.1       business-cockpit-mongo
-```
+### Functionality provided by the business cockpit
 
-*Hint:* The file is `/etc/hosts` for Linux and `C:\Windows\System32\drivers\etc\hosts` for Windows.
+Each UI-feature provided is based on UI components next to their backend-counterparts:
 
-To connect using a client one can use these parameters:
+* **List(s) of user tasks**:<br>There is a default-list showing all user tasks assigned to the user logged in, assigned
+  to the user's groups, claimed by the user or any dangling user task (no information about assignment given). Based
+  on that, one can easily provide prefiltered lists according to any business requirement. The individual content
+  to list for each user task (e.g. columns showing business data) is reported by the business service spawning the user task.
+  Additionally, the rendering of columns can be customized (e.g. render icons instead of values, etc.).
+* **A mechanism to show user task forms**:<br>Once the user wants to work on or complete a user task
+  (by selecting an item in the
+  list of user tasks), the form's UI is loaded from the business service through the registered proxy by using *Module Federation*.
+  Saving or completing the form is not part of the business cockpit but implemented by the business
+  service (providing its own API). If the form can be completed the respective business service will report
+  that change of status to the business cockpit which in turn results in an update of the list of user tasks.
+* **List(s) of workflows**:<br>There is a default-list showing all workflows accessible to the current user, accessible
+  to the user's groups or any dangling workflow (no information about access). Analogous to lists of user tasks, one
+  can easily provide prefiltered lists according to any business requirement. The individual content to list for
+  each workflow (e.g. columns showing business data) is reported by the business service running the workflow.
+  Additionally, the rendering of columns can be customized (e.g. render icons instead of values, etc.).
+* **A mechanism to show status-sites of workflows**:<br>Once the user wants to review the status of a workflow
+  (select an item in the list of workflows), the workflow's status-site UI is loaded from the business service
+  through the registered proxy by using *Module Federation*. Any data shown or action provided (e.g. cancel the
+  workflow) is not part of the business cockpit but implemented by the business service (providing its own API).
+  If such an action affects the status of the workflow (e.g. cancel the workflow) the respective business service
+  will report that change to the business cockpit which in turn results in an update of the list of workflows.
+* **A mechanism to show individual workflow UI-components**:<br>The given mechanism to show user task forms or
+  status-sites of workflows can also be used to add individual UI-components of the business service
+  to the business cockpit UI.
+  You may define regions in your UI (header, menu, etc.) in which those individual components are shown. This is a
+  possibility to provide additional sites like workflow start forms or sites providing functionality common to all
+  running workflows (e.g. suspend/active all workflows).
 
-* *endpoint:* business-cockpit-mongo:27017
-* *replica-set:* rs-business-cockpit
-* *authentication DB:* business-cockpit
-* *username:* business-cockpit
-* *password:* business-cockpit
+Additionally, there are features targeting the entire application:
 
-### Local NPM registry
+* **Security**:<br>It is based on `Spring Security` and therefore includes
+  a lot of identity providers (Active Directory, Keycloak, etc.). The business cockpit adds
+  an unifying umbrella of security across all components involved to show users tasks and workflows.
+  The current user logged into the business cockpit is also passed to workflow services through the
+  proxy so the UI of user tasks and workflow status-sites can be adapted according to the user's roles.
+* **Usertask and workflow lifecycle events**:<br>Those events are reported by individual workflow
+  modules, as workflows or user tasks are created, updated, completed or cancelled. Reporting can
+  be done via REST or asynchronously via Kafka which is implemented by ready-to-use adapters
+  (Maven modules) for [VanillaBP](https://www.vanillabp.io) based workflows. The events reported are processed by the
+  business cockpit to update
+  the underlying database as well as notifying UI components for life-updates resulting
+  in a state-of-the-art UX.
 
-As part of the build NPM packages are published which has to be used by BPMS software which wants to integrate to the VanillaBP business cockpit. Additionally, the business cockpit itself uses those packages as dependencies. To make this work for local development as well as for publishing builds one has to use a local NPM registry. For this the tool [Verdaccio](https://www.verdaccio.org/) is used which is also part of the provided `docker-compose.yaml`.
+### Technologies
 
-To use this registry one has to create a file `.npmrc` in your home folder:
+To learn about technologies used by the *VanillaBP Business Cockpit* checkout the
+[respective section](./container#technologies) of the *container module*
+(see [Documentation by module](#by-module)).
 
-```
-@vanillabp:registry=http://localhost:4873
-//localhost:4873/:_authToken="fake"
-```
+## Documentation
 
-*Hint:* Verdaccio is preconfigured to accept unauthorized attempts of publishing NPM packages. Therefore, as you can see, the content of the authentication token `fake` is not taken into account - it just has to be filled.
+### By use-case
 
-To connect to the registry UI use these parameters:
+* Running the *VanillaBP Business Cockpit*: [container/README.md](./container/README.md)
+* Building a customized business cockpit: [container/README.md](./container/README.md)
+* Use out-of-the-box adapters for filling the business cockpit with data of your business processes:
+  [spi-for-java/README.md](./spi-for-java) and [adapters/README.md](./adapters/README.md)
+* Build user task forms** to be shown in the business cockpit: []
+* Build workflow status sites** to be shown in the business cockpit: []
+* Integrate business service not using out-of-the-box adapters: [development/simulator/README.md](./development/simulator/README.md)
+* Contributing to the *VanillaBP Business Cockpit*: [development/README.md](./development/README.md)
 
-* *URL:* [http://localhost:4873/](http://localhost:4873/)
-* *username:* admin
-* *password:* admin
+### By module
 
-*Hint:* If you do repeating builds for testing then you have to use the Maven profile `unpublish-npm` which removes previously published packages from the local registry.
+in logical order:
 
-## Build and Run the Business Cockpit
-
-The business cockpit is developed by using Java 17 and Spring Boot 3 (reactive). To build the business cockpit Maven is used:
-
-```sh
-cd vanillabp-business-cockpit
-mvn -Dnpm.registry=http://localhost:4873 package -P unpublish-npm
-```
-
-(`-P unpublish-npm` is a Maven profile which forces to unpublish NPM components previously published to Verdaccio. You might need to skip this profile for the very first build since there was no packages published before.)
-
-After the build succeeded the service can be started:
-
-```sh
-cd business-cockpit
-jar -Dspring.profiles.active=local -jar target/business-cockpit-*-runnable.jar
-```
-
-To connect to the business cockpit UI use these parameters:
-
-* *URL:* [http://localhost:8080/](http://localhost:8080/)
-* *username:* test
-* *password:* test
-
-This should show up an empty business cockpit since no user tasks or workflows were reported yet. To test this before connecting your business service one can use the [simulation service](#simulation-service).
-
-### Repeating builds
-
-During developing the Business Cockpit itself one might change only backend code and whishes to test that changes without doing a full build.
-This can be easily achieved by this Maven command:
-
-```sh
-mvn install -Plocal-install
-```
-
-If you do some UI development one can run
-
-```sh
-npm start
-```
-
-in every UI source directory to get a continuous build.
-
-Since the first build links all npm packages, changes in one packages are active immediately using this technique.
-There is one exception: The `webapp-angular`-UI in `simulator` uses the package `dev-shell-angular` and Angular does not support NPM linking. So extending `dev-shell-angular` implies the need to publish the package to the local registry after every change and update the `webapp-angular` afterward to use that change:
-
-```sh
-cd development/dev-shell-angular
-mvn -Dnpm.registry=http://localhost:4873 package -P unpublish-npm
-cd -
-cd development/simulator/src/main/webapp
-npm update --scope '@vanillabp/*'
-```
-
-## Simulation Service
-
-This is a service which can be used for local development and testing. I mimics a business service which reports user tasks and workflows to be shown in the business cockpit UI.
-
-To start it use these commands:
-
-```sh
-cd development/simulator
-java --add-opens=java.base/java.lang=ALL-UNNAMED -jar target/simulator-*-runnable.jar
-```
-
-Now you can open the [test data generator form](http://localhost:8079/testdata/usertask/form) in your browser. It gives you verify parameters to generate user tasks. For now simply press the `Generate` button. 10 new user tasks should appear in the VanillaBP business cockpit immediately.
-
-## Integrate your Business Services
-
-The [simulation service](#simulation-service) also acts as template for your services. In `development/simulator/src/main/webapp` you will find samples of user task forms.
-
-to be completed...
+1. **[spi-for-java](./spi-for-java)**:<br>The *service provider interface* for workflow modules to be used in
+   [VanillaBP workflow services](https://github.com/vanillabp/spi-for-java#wire-up-a-process)
+   for customizing data reported as part of workflow or user task lifecycle events (e.g. adding business data).
+1. **[adapters](./adapters)**:<br>Business processing system (BPS) adapters in the meaning of hexagonal architecture implementing *spi-for-java*.
+   1. **[commons](./adapters/commons)**:<br>Functionality common to more than one specific BPS adapter.
+   1. **[camunda7](./adapters/camunda7)**:<br>Adapter to be used in workflow modules leveraging the BPS [Camunda 7](http://www.camunda.org).
+   1. **[camunda8](./adapters/camunda8)**:<br>Adapter to be used in workflow modules leveraging the BPS [Camunda 8](http://www.camunda.io).
+1. **container**:<br>The business cockpit microservice. Use this as a Maven-dependency for a custom business cockpit.
+   The included React application can be used out-of-the-box or as a template.
+1. **ui**:<br>NPM libraries for custom UIs.
+   1. **bc-shared**:<br>Components and Typescript types used by the business cockpit UI and also by workflow module
+      UI components (user task form, workflow status-site).
+   1. **bc-ui**:<br>Components and Typescript types for building individual business cockpit UIs.
+1. **common**:<br>Spring Boot based functionality used by `container` but may also be used by
+   workflow modules or other individual services.
+1. **apis**:<br>Ready-to-use clients and servers for various APIs in the context of the *VanillaBP Business Cockpit*.
+   1. **bpms-api**:<br>API for reporting workflow and user task lifecycle events via REST or Kafka.
+   1. **official-gui-api**:<br>REST-API expected by business cockpit UI components to retrieve data from.
+   1. **workflow-provider-api**:<br>REST-APIs workflow modules may implement to customize business cockpit behavior.
+1. **development**:<br>Functionality to support developing workflow modules or the *VanillaBP Business Cockpit* itself.
+   1. **dev-shell-react**:<br>A NPM library for easy developing user task forms and workflow status-sites using *React*.
+   1. **dev-shell-angular**:<br>A NPM library for easy developing user task forms and workflow status-sites using *Angular*.
+   1. **simulator**:<br>A standalone microservice used for business cockpit development, which mimics a workflow module.
+   1. **docker-compose.yaml**:<br>Preconfigured docker containers for business cockpit development.
 
 ## Noteworthy & Contributors
 
@@ -167,6 +185,27 @@ VanillaBP was developed by [Phactum](https://www.phactum.at) with the intention 
 
 ## License
 
-Copyright 2022 Phactum Softwareentwicklung GmbH
+Copyright 2024 Phactum Softwareentwicklung GmbH
 
 Licensed under the Apache License, Version 2.0
+
+## Changelog
+
+### 0.0.4-SNAPSHOT
+
+* Introduce person & group
+   * user task.assignee, user task.candidateUsers, workflow.initiator and workflow.accessibleToUsers type change from string to Person
+   * user task.canidateGroups, workflow.accessibleToGroups type change to Group
+   * current-user type change to a combination of Person and Groups
+   * A PersonAndGroupMapper is introduced to provide a mapping between user provided by APIs and the values stored in the database
+   * A PersonAndGroupApiMapper is introduced to provide a mapping between data stored in the database and the details shown in the UI
+* Introduce user task-list and workflow-list column's type
+   * `i18n`: An sub-field for each supported locale (language) is expected
+   * `person`: A person-compatible object has to be provided
+   * `date`: A Date object which will be rendered as a date
+   * `date-time`: A Date object which will be rendered as a timestamp
+* Define explicit colors in `ui/bc-shared/src/theme/index.ts`
+* React-Dev-Shell: Changed parameters of DevShell component
+* fetch-API: change from dispatch- to toast-function
+* Add custom federated components to DevShell
+* Sort-indexes will be dropped and recreated on demand due to naming
